[package]
name = "abi_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
abi_types = { path = "../abi_types" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yml = "0.0.12"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[lib]
name = "abi_loader"

[[bin]]
name = "abi-flatten"
path = "src/flatten_main.rs"
