[package]
name = "thru-base"
version = "0.1.0"
edition = "2024"
description = "Thru base"
license = "Apache-2.0"

[dependencies]
rand = "0.9.2"
ed25519-dalek = "2.2.0"
bytemuck = { version = "1.23.1", features = ["derive"] }
anyhow = "1.0.98"
hex = "0.4.3"
sha2 = "0.10.9"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
blake3 = "1.5"
tracing = "0.1"