[package]
name = "thru-base"
version = "0.1.0"
edition = "2024"
description = "Thru base"
license = "Apache-2.0"
repository = "https://github.com/Unto-Labs/thru"

[dependencies]
rand = "0.10.1"
ed25519-dalek = { version = "2.2.0", features = ["hazmat"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
anyhow = "1.0.102"
hex = "0.4.3"
sha2 = "0.11.0"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
blake3 = "1.8"
tracing = "0.1"
curve25519-dalek = { version = "4", default-features = false, features = ["digest"] }
