[package]
name = "thru-cli"
version = "0.1.0"
description = "Command-line interface for the Thru blockchain"
license = "Apache-2.0"
edition = "2024"
keywords = ["thru", "cli", "blockchain", "rpc"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[[bin]]
name = "thru-cli"
path = "src/main.rs"

[dependencies]
# Thru dependencies
#thru-grpc-client = { version = "0.1.0", path = "../thru-grpc-client" }
thru-client = { path = "../thru-client" }
thru-base = { version = "0.1.0", path = "../thru-base" }

# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.47", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# gRPC types (needed for health checks and error handling)
tonic = { version = "0.14.2", features = ["transport", "tls-aws-lc", "tls-webpki-roots"] }
tonic-health = "0.14.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Cryptography
hex = "0.4"
sha2 = "0.10"
rand = "0.9.2"
base64 = "0.22"

# System utilities
dirs = "5.0"

# Output formatting
colored = "2.1"
chrono = "0.4"

# URL handling
url = "2.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
wiremock = "0.6"
assert_matches = "1.5"
