[package]
name = "thru-client"
version = "0.1.0"
license = "Apache-2.0"
description = "High-level gRPC client library for the Thru blockchain"
edition = "2024"
keywords = ["thru", "grpc", "client", "blockchain", "rpc"]
categories = ["api-bindings", "asynchronous", "network-programming"]

[dependencies]
# Thru dependencies
thru-grpc-client = { version = "0.1.0", path = "../thru-grpc-client" }
thru-base = { version = "0.1.0", path = "../thru-base" }

# Async runtime
tokio = { version = "1.47", features = ["full"] }

# gRPC client
tonic = { version = "0.14.2", features = ["transport", "tls-aws-lc", "tls-webpki-roots"] }
prost-types = "0.14"
tonic-health = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Cryptography and encoding
base64 = "0.22"

# URL handling
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
