[package]
name = "thru-grpc-client"
version = "0.1.0"
edition = "2024"
description = "Thru GRPC Client"
license = "Apache-2.0"
repository = "https://github.com/Unto-Labs/thru"

[dependencies]
bytes = "1"
prost = "0.14.3"
prost-types = "0.14.3"
tonic = { version = "0.14.5", features = ["transport", "tls-aws-lc", "tls-webpki-roots"] }
tonic-prost = "0.14.5"

[build-dependencies]
prost = "0.14.3"
prost-types = "0.14.3"
tonic-prost-build = "0.14.5"
walkdir = "2"
