[package]
name = "thru-rpc-client"
version = "0.1.0"
edition = "2024"
description = "Client library for Thru RPC and WebSocket APIs"
keywords = ["thru", "rpc", "client", "websocket", "blockchain"]
categories = ["api-bindings", "asynchronous", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "zstd"] }

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# URL handling
url = "2.5"

# Base64 encoding/decoding
base64 = "0.22"

# Thru base types
thru-base = { path = "../thru-base" }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Optional: connection pooling
deadpool = { version = "0.12", optional = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
assert_matches = "1.5"

[features]
default = []
connection-pool = ["deadpool"]

[[example]]
name = "basic_http_client"
path = "examples/basic_http_client.rs"

[[example]]
name = "websocket_subscriptions"
path = "examples/websocket_subscriptions.rs"

[[example]]
name = "subscription_handles"
path = "examples/subscription_handles.rs"
