[package]
name = "abi_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
abi_types = { path = "../abi_types" }
abi_loader = { path = "../abi_loader" }
abi_gen = { path = "../abi_gen" }
abi_reflect = { path = "../abi_reflect" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
serde_yml = "0.0.12"

[[bin]]
name = "abi"
path = "src/main.rs"
