[package]
name = "thru-abi-gen"
version = "0.1.0"
edition = "2024"
description = "ABI code generation utilities for the Thru blockchain"
license = "Apache-2.0"
repository = "https://github.com/Unto-Labs/thru"

[dependencies]
abi_types = { package = "thru-abi-types", version = "0.1.0", path = "../abi_types" }
abi_loader = { package = "thru-abi-loader", version = "0.1.0", path = "../abi_loader" }
lexpr = "0.2.7"
serde = "1.0.89"
serde_derive = "1.0"
serde-lexpr = "0.1"
anyhow = "1.0"
serde_yml = "0.0.12"
serde_json = "1.0"
indexmap = "2"
thiserror = "2.0.16"
clap = { version = "4.5", features = ["derive"] }
prost = "0.13"

[features]
default = []
layout_graph_trace = []

[lib]
name = "abi_gen"
path = "src/lib.rs"

[[bin]]
name = "abi-gen"
path = "src/main.rs"
