[package]
name = "thru-abi-loader"
version = "0.1.0"
edition = "2021"
description = "ABI loading utilities for the Thru blockchain"
license = "Apache-2.0"
repository = "https://github.com/Unto-Labs/thru"

[dependencies]
abi_types = { package = "thru-abi-types", version = "0.1.0", path = "../abi_types" }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yml = "0.0.12"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "5"
git2 = { version = "0.19", default-features = false, features = ["vendored-openssl", "ssh"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "charset", "http2", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"

[lib]
name = "abi_loader"

[[bin]]
name = "abi-flatten"
path = "src/flatten_main.rs"
