[package]
name = "abi_reflect"
version = "0.1.0"
edition = "2021"

[dependencies]
abi_gen = { path = "../abi_gen" }
thiserror = "2.0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"

[lib]
name = "abi_reflect"
path = "src/lib.rs"

[[bin]]
name = "abi-reflect"
path = "src/cmd/reflect.rs"

[dev-dependencies]
serde_yml = "0.0.12"
