[package]
name = "abi_reflect_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
abi_reflect = { path = "../abi_reflect" }
abi_gen = { path = "../abi_gen" }
console_error_panic_hook = "0.1"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
